// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package mempool;

enum MempoolAddTransactionStatusCode {
  // Transaction was sent to Mempool
  Valid = 0;
  // The sender does not have enough balance for the transaction.
  InsufficientBalance = 1;
  // Sequence number is old, etc.
  InvalidSeqNumber = 2;
  // Mempool is full (reached max global capacity)
  MempoolIsFull = 3;
  // Account reached max capacity per account
  TooManyTransactions = 4;
  // Invalid update. Only gas price increase is allowed
  InvalidUpdate = 5;
}

message MempoolAddTransactionStatus {
  MempoolAddTransactionStatusCode code = 1;
  string message = 2;
}
